--- a/pom.xml
+++ b/pom.xml
@@ -369,6 +369,7 @@
               <sourcePaths>
                 <path>${basedir}/ramls/holdings-record.json</path>
                 <path>${basedir}/ramls/mappingMetadataDto.json</path>
+                <path>${basedir}/ramls/authority.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
               <generateBuilders>true</generateBuilders>
