--- a/pom.xml
+++ b/pom.xml
@@ -508,7 +508,7 @@
           </execution>
         </executions>
       </plugin>
-
+      <!--//NOSONAR-->
       <plugin>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-maven-plugin</artifactId>
@@ -517,8 +517,8 @@
           <changeLogFile>src/main/resources/liquibase/tenant/changelog.xml</changeLogFile>
           <driver>org.postgresql.Driver</driver>
           <url>jdbc:postgresql://${docker.host.address}:${db.port},${docker.container.db.ip}:5432/postgres</url>
-          <username>postgres</username>
-          <password>postgres</password>
+          <username>${liquibase.login.details}</username>
+          <password>${liquibase.login.details}</password>
           <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
         </configuration>
         <dependencies>
