MODINV-657 Fix creating holdings via data import
(cherry picked from commit 92aa24901c2d05637c4901b71fef1307b5748e09)

--- a/pom.xml
+++ b/pom.xml
@@ -381,6 +381,7 @@
             <configuration>
               <sourcePaths>
                 <path>${basedir}/ramls/holdings-record.json</path>
+                <path>${basedir}/ramls/holdings-records-source.json</path>
                 <path>${basedir}/ramls/mappingMetadataDto.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
