--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>mod-inventory</artifactId>
   <groupId>org.folio</groupId>
-  <version>18.2.1</version>
+  <version>18.2.2-SNAPSHOT</version>
   <licenses>
     <license>
       <name>Apache License 2.0</name>
@@ -313,7 +313,7 @@
     <url>https://github.com/folio-org/mod-inventory</url>
     <connection>scm:git:git://github.com:folio-org/mod-inventory.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-inventory.git</developerConnection>
-    <tag>v18.2.1</tag>
+    <tag>v18.2.0</tag>
   </scm>
 
   <build>
@@ -466,7 +466,6 @@
             <include>**/storage/external/failure/ExternalStorageFailureSuite.class</include>
             <include>org/folio/inventory/**</include>
           </includes>
-          <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
       <plugin>
