--- a/pom.xml
+++ b/pom.xml
@@ -172,8 +172,8 @@
     </dependency>
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
-      <version>2.25.1</version>
+      <artifactId>wiremock-jre8</artifactId>
+      <version>2.33.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
