--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>data-import-processing-core</artifactId>
-      <version>3.5.0-SNAPSHOT</version>
+      <version>3.5.1</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
