--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-isbn-util</artifactId>
-      <version>1.4.0</version>
+      <version>1.5.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
