--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>mod-inventory</artifactId>
   <groupId>org.folio</groupId>
-  <version>19.1.0-SNAPSHOT</version>
+  <version>20.0.0-SNAPSHOT</version>
   <licenses>
     <license>
       <name>Apache License 2.0</name>
@@ -234,7 +234,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>data-import-processing-core</artifactId>
-      <version>3.6.0-SNAPSHOT</version>
+      <version>${data-import-processing-core.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
@@ -304,6 +304,7 @@
     <liquibase.version>4.9.1</liquibase.version>
     <kafkaclients.version>3.1.0</kafkaclients.version>
     <junit.version>4.13.2</junit.version>
+    <data-import-processing-core.version>4.0.0-SNAPSHOT</data-import-processing-core.version>
   </properties>
 
   <distributionManagement>
