--- a/pom.xml
+++ b/pom.xml
@@ -428,6 +428,7 @@
                 <path>${basedir}/ramls/holdings-records-source.json</path>
                 <path>${basedir}/ramls/mappingMetadataDto.json</path>
                 <path>${basedir}/ramls/marcBibUpdate.json</path>
+                <path>${basedir}/ramls/linkUpdateReport.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
               <generateBuilders>true</generateBuilders>
