--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
-      <version>5.6.0-SNAPSHOT</version>
+      <version>5.6.0</version>
       <exclusions>
         <!-- This is provided by JDK >= 9 causing a compile error (Eclipse doesn't suppress this compile error):
              "The package org.xml.sax is accessible from more than one module: <unnamed>, java.xml"
@@ -304,7 +304,7 @@
     <liquibase.version>4.9.1</liquibase.version>
     <kafkaclients.version>3.1.0</kafkaclients.version>
     <junit.version>4.13.2</junit.version>
-    <data-import-processing-core.version>4.0.0-SNAPSHOT</data-import-processing-core.version>
+    <data-import-processing-core.version>4.0.0</data-import-processing-core.version>
   </properties>
 
   <distributionManagement>
