--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -6,18 +6,18 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 15
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
-    - uses: actions/setup-java@v2.3.1
+    - uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: '11'
         cache: maven
     - run: mvn clean install -DskipTests
-    - run: brew install postgres
-    - run: (echo "local all all trust"; echo "host all all all md5") > /usr/local/var/postgres/pg_hba.conf
-    - run: brew services start postgres
+    - run: brew install postgresql@12
+    - run: (echo "local all all trust"; echo "host all all all md5") > /usr/local/var/postgresql@12/pg_hba.conf
+    - run: brew services start postgresql@12
     - run: brew install zookeeper
     - run: brew services start zookeeper
     - run: brew install kafka
@@ -46,4 +46,3 @@ jobs:
     - run: "curl -sS -H 'x-okapi-tenant: diku' http://localhost:9403/isbn/validator?isbn=091698477X | tee out"
     - run: sleep 5; cat log
     - run: grep isValid out
-
