--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,23 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>mod-source-record-manager-client</artifactId>
+      <version>3.7.0-SNAPSHOT</version>
+      <exclusions>
+        <!-- This is provided by JDK >= 9 causing a compile error (Eclipse doesn't suppress this compile error):
+             "The package org.xml.sax is accessible from more than one module: <unnamed>, java.xml"
+             https://stackoverflow.com/questions/55571046/eclipse-is-confused-by-imports-accessible-from-more-than-one-module
+        -->
+        <exclusion>
+          <groupId>xerces</groupId>
+          <artifactId>xmlParserAPIs</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>data-import-processing-core</artifactId>
