--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -8,8 +8,8 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] [$${FolioLoggingContext:requestid}] [$${FolioLoggingContext:tenantid}] [$${FolioLoggingContext:userid}] [$${FolioLoggingContext:moduleid}] %-5p %-20.20C{1} %m%n
 
-rootLogger.level = info
-rootLogger.appenderRefs = info
+rootLogger.level = debug
+rootLogger.appenderRefs = debug
 rootLogger.appenderRef.stdout.ref = STDOUT
 
 logger.folio_persist.name = org.folio.rest.persist
