--- a/pom.xml
+++ b/pom.xml
@@ -445,6 +445,7 @@
                 <path>${basedir}/ramls/holdings-record.json</path>
                 <path>${basedir}/ramls/holdings-records-source.json</path>
                 <path>${basedir}/ramls/mappingMetadataDto.json</path>
+                <path>${basedir}/ramls/instance-ingress-event.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
               <generateBuilders>true</generateBuilders>
