--- a/pom.xml
+++ b/pom.xml
@@ -445,6 +445,9 @@
                 <path>${basedir}/ramls/holdings-record.json</path>
                 <path>${basedir}/ramls/holdings-records-source.json</path>
                 <path>${basedir}/ramls/mappingMetadataDto.json</path>
+                <path>${basedir}/ramls/holdings_update_ownership.json</path>
+                <path>${basedir}/ramls/items_update_ownership.json</path>
+                <path>${basedir}/ramls/move_response.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
               <generateBuilders>true</generateBuilders>
