--- a/pom.xml
+++ b/pom.xml
@@ -449,6 +449,8 @@
                 <path>${basedir}/ramls/items_update_ownership.json</path>
                 <path>${basedir}/ramls/update_ownership_response.json</path>
                 <path>${basedir}/ramls/instance-ingress-event.json</path>
+                <path>${basedir}/ramls/tenantItemPair.json</path>
+                <path>${basedir}/ramls/tenantItemPairCollection.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
               <generateBuilders>true</generateBuilders>
