--- a/pom.xml
+++ b/pom.xml
@@ -451,6 +451,7 @@
                 <path>${basedir}/ramls/instance-ingress-event.json</path>
                 <path>${basedir}/ramls/tenantItemPair.json</path>
                 <path>${basedir}/ramls/tenantItemPairCollection.json</path>
+                <path>${basedir}/ramls/tenantItemResponse.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
               <generateBuilders>true</generateBuilders>
